Задачи - красивый переключатель

--- a/chemcloud/templates/chemical/problem_detail.html
+++ b/chemcloud/templates/chemical/problem_detail.html
@@ -17,6 +17,30 @@
 
 <div class="row">
  <div class="col-xs-7">
+ 
+ <table class="table ">
+    <tbody id="detail_main" model_name="Problem" url_edit="{% url 'problem_detail_edit' id_reaction problem.pk %}" >
+
+				
+					<tr>
+        <td class="detail_caption">Название:</td>
+        <td class="detail_value">{{  problem.problem_type.name }}</td>
+      </tr>
+      
+      <tr>
+        <td class="detail_caption">Описание:</td>
+        <td class="detail_value"><textarea class="form-control"  rows="10" disabled="disabled">{{  problem.description }}</textarea></td>
+        {% if is_owner %}
+        <td class="detail_edit"></td>
+         <td class="detail_btns" field_name="description">
+
+        </td>
+        {% endif %}
+      </tr>
+      
+     </tbody>
+     </table>
+    
 
 
  
@@ -38,4 +62,20 @@
             </div>
 
 </div>
+{% endblock %}
+
+{% block footer_block %}
+<!-- 2. Подключить скрипт moment-with-locales.min.js для работы с датами -->
+<script src="{% static "js/moment-with-locales.min.js" %}"></script>
+<!-- 4. Подключить скрипт виджета "Bootstrap datetimepicker" -->
+ <script src="{% static "js/bootstrap-datetimepicker.min.js" %}"></script>
+<!-- 6. Подключить CSS виджета "Bootstrap datetimepicker" -->   
+<link href="{% static "css/bootstrap-datetimepicker.min.css" %}" rel="stylesheet">
+
+
+<script src="{% static "js/populate_dict_select.js" %}"></script>
+<script src="{% static "js/details.js" %}"></script>
+
+
+  
 {% endblock %}
