--- a/chemcloud/templates/chemical/problem_init_2.html
+++ b/chemcloud/templates/chemical/problem_init_2.html
@@ -24,12 +24,22 @@
       </div>
     </div>
     
-    <div class="panel panel-default">
-      <div class="panel-heading">
+
+      
+       <div class="panel panel-default">
+      <div class="panel-heading" >            
+        
         <h4 class="panel-title">
-          <a data-toggle="collapse" href="#step3">Шаг 1.3. Требуется ли учитывать дополнительные ограничения?</a>
-        </h4>
-      </div>
+          <a data-toggle="collapse"  >Шаг 1.3. Требуется ли учитывать дополнительные ограничения?</a>
+        </h4>        
+        
+        <div class="checkbox checkbox-slider--b-flat checkbox-slider-info" >
+	<label >
+		<input  type="checkbox" name="check_experiment" class="checkbox_slider_with_collapse" data_id_collapsed="#step3"><span></span>
+	</label>
+          </div>
+           </div>
+      
       <div id="step3" class="panel-collapse collapse">
         <div class="panel-body">Panel Body</div>
         <div class="panel-footer">Panel Footer</div>
