--- a/chemcloud/templates/chemical/experiment_edit.html
+++ b/chemcloud/templates/chemical/experiment_edit.html
@@ -5,30 +5,40 @@
 
 {% block body_block %}
 	<div class="page-header">
-		<h1>Редактирование эксперимента {% if is_owner %} (Owner grants) {% else %}(Read only){% endif %}</h1>
+		<h1>{{ experiment.name }} {% if is_owner %} (Owner grants) {% else %}(Read only){% endif %}</h1>
 	</div>
 		<div class="page-content">
-			{% if experiment %}
-				<table>
-					<tr>
-						<td>{{ experiment.name }}</td>
-					</tr>					
-					
-				</table>
-			{% else %}
-				<strong> Не удалось получить детали эксперимента </strong>
-			{% endif %}
-<h4> Исходные условия:</h4>
-Вид:
-<select>
-<option>Псевдонимы</option>
-<option>Формулы</option>
-</select>
-<div >
-<h4> Вещества реакции:</h4>
-</div>
+		
+<div class="row"><div class="col-xs-12">		       
+			       
 
-<div>
+  <div class="panel-group">
+   
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" href="#init">Исходные условия </a>
+        </h4>
+      </div>
+      <div id="init" class="panel-collapse collapse in">
+        <div class="panel-body">
+        
+        
+        <div class="controls-row">
+      <label class="control-label">Вид: </label>
+   
+               <label class="radio-inline">
+          <input name="radioGroupInit" id="radio1" value="alias" type="radio" checked="checked"> Псевдонимы
+        </label>
+        <label class="radio-inline">
+          <input name="radioGroupInit" id="radio2" value="formula" type="radio"> Формулы
+        </label>
+                       
+        </div>
+        
+        
+        
+        <div>
 <table class="paleblue">
     <tr>
        <th>Усл/парметр</th>
@@ -64,17 +74,36 @@
     </tr>
 </table>
 </div>
-
-<div >
-<h4> Данные эксперимента:</h4>
-</div>
-Вид:
-
-<input type="radio" checked>Таблица
-<input type="radio">График
-
-<div>
-<table class="paleblue">
+        
+        
+        
+        </div>
+      </div>
+    </div>  
+                              
+     <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" href="#subst">Вещества реакции </a>
+        </h4>
+      </div>
+      <div id="subst" class="panel-collapse collapse in">
+        <div class="panel-body">
+        
+       
+       
+      <div class="controls-row">
+      <label class="control-label">Вид: </label>
+         
+    <label class="radio-inline">
+          <input name="radioGroupSubst" id="radio3" value="table" type="radio" checked="checked"> Таблица
+        </label>
+        <label class="radio-inline">
+          <input name="radioGroupSubst" id="radio4" value="graph" type="radio"> График
+        </label>       
+        </div>
+        
+        <table class="paleblue">
     <tr>
        <th>{{ experiment.arg.name }} ({{experiment.argument_measure.code }})</th>
           <th> вещество</th> <th>{{ experiment.func.name }} ({{experiment.function_measure.code }})</th>
@@ -95,7 +124,38 @@
 
 
 </table>
-</div>
+        
+        </div>
+        
+      </div>
+    </div> 
+                   
+                                 
+                                               
+     <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" href="#subst_other">Дополнительные свойства веществ </a>
+        </h4>
+      </div>
+      <div id="subst_other" class="panel-collapse collapse in">
+        <div class="panel-body">
+        
+    
+        
+        </div>
+        
+      </div>
+    </div>                                                        
+                                                                           
+                                                                                              
+                    
+    </div>
+    </div></div>
+            
+        
+
+
 
             </div>
 {% endblock %}
