--- a/chemcloud/templates/chemical/reaction_detail.html
+++ b/chemcloud/templates/chemical/reaction_detail.html
@@ -110,7 +110,19 @@
 
                <form method="POST" class="form" >
 
-            {% include "chemical/form_body_new.html" %}    </form >
+         
+             {% csrf_token %}
+            
+{% for field in form %}
+  {{field.label}} {% if field.field.required %} * {% endif %}
+  {{field}}
+  {{field.errors}}
+  <br>
+{% endfor %}                        
+			
+<button type="submit" class="save btn btn-primary" name="save_btn">Сохранить</button>
+              
+                </form >
             </div>
     </div>
     </div>
