--- a/chemcloud/templates/chemical/step_detail.html
+++ b/chemcloud/templates/chemical/step_detail.html
@@ -18,8 +18,15 @@
     
             
   <table class="table">
-     <tbody id="detail_main" model_name="Reaction_scheme" url_edit="{% url 'step_detail_edit' id_reaction step.scheme.pk step.pk %}">
-					<tr>
+     <tbody id="detail_main" model_name="Scheme_step" url_edit="{% url 'step_detail_edit' id_reaction step.scheme.pk step.pk %}">
+					
+    <tr>
+        <td class="detail_caption">Механизм:</td>
+        <td class="detail_value">{{  step.scheme.name }}</td>
+      </tr>
+      		
+					
+    <tr>
 						<td class="detail_caption">Обозначение:</td>
 						
 						<td class="detail_value"><input class="box_input"  type="text" disabled="disabled" value="{{  step.name }}"/></td>
