Исправлены ошибки в формировании механизма:1)доступность кнопок в новых строках, когда не было ни одной стадии(сроки);2)обработчики ошибок когда вещество содержится и слева и справа;3)удаление стадии, которая была добавлена через кнопку новой стадии

--- a/chemcloud/static/custom/other.css
+++ b/chemcloud/static/custom/other.css
@@ -126,3 +126,12 @@ color: #FEC63D;
 .paleblue-hover > tbody > tr.danger:hover > th {
   background-color: #ebcccc;
 }
+
+
+.glyphicon-good_balance {
+ color: #008000;
+}
+
+.glyphicon-bad_balance {
+ color: #ff0000;
+}
