Заголовок в таблице с Механизмами

--- a/chemcloud/templates/chemical/scheme_edit.html
+++ b/chemcloud/templates/chemical/scheme_edit.html
@@ -29,7 +29,7 @@
 				<table id="all-steps_{{id_reaction}}_{{id_scheme}}"  class="paleblue" data-url-cellupdate="{% url 'cell_update' %}">
 					<thead>
 						<tr>
-							<th class="order_arrows">Переместить</th>
+							<th class="order_arrows"></th>
 							<th class="order orderable"><a href="?sort=order">№ п/п</a></th>
 							<th class="name orderable"><a href="?sort=name">Обозначение</a></th>
 							<th class="step">Стадия</th>
