--- a/chemcloud/templates/chemical/react_substance_detail.html
+++ b/chemcloud/templates/chemical/react_substance_detail.html
@@ -18,14 +18,18 @@
             
   <table class="table">
      <tbody id="detail_main" model_name="Reaction_subst" url_edit="{% url 'react_substance_detail_edit' id_reaction substance.pk %}" >
-     <tr>
+     
+     {% if substance.substance %}
+    <tr>
         <td class="detail_caption">Название:</td>
         <td class="detail_value">{{  substance.substance.name }}</td>
       </tr>
+      
       <tr>
         <td class="detail_caption">Брутто-формула:</td>
         <td class="detail_value">{{  substance.substance.formula_brutto_formatted | safe}}</td>
       </tr>
+      {% endif %}
       
       <tr>
       <td class="detail_caption">Псеводним:</td>
