Базу пересоздать! Серии Экспериментов, поправила скрипты заполнения, заполнение справочников слила в один. Добавление/Детали серии. Поле серии при создании/редактировании Эксперимента. Поле серии в таблице Экспериментов(пока не сделан вывод по сериям). Поправлены косячки для Вещества Реакции

--- a/chemcloud/templates/chemical/experiment_all.html
+++ b/chemcloud/templates/chemical/experiment_all.html
@@ -12,7 +12,9 @@
 		{% if id_reaction %}
 			<div class="panel panel-default">
 				<div class="panel-body">
-					<a class = "btn btn-new" href = "{% url 'experiment_new' id_reaction %}" role = "button">Создать эксперимент</a> <!-- TODO: убрала из кнопки pull-left. Без него кнопка становится нормальной ссылкой, хоть и сбивается выравнивание -->
+					<a class = "btn btn-new" href = "{% url 'experiment_new' id_reaction %}" role = "button">Создать эксперимент</a> 
+					
+					<a class = "btn btn-new" href = "{% url 'exper_serie_new' id_reaction %}" role = "button">Создать серию для экспериментов</a>
 				</div>
 			</div>
 
