--- a/chemcloud/templates/chemical/react_substance_detail.html
+++ b/chemcloud/templates/chemical/react_substance_detail.html
@@ -2,6 +2,11 @@
 
 {% load staticfiles %}
 
+{% block header_block %}  
+<link href="{% static "css/select2.css" %}" rel="stylesheet" />
+
+{% endblock %}
+
 
 {% block body_block %}
 <div class="page-header">
@@ -18,8 +23,21 @@
             
   <table class="table">
      <tbody id="detail_main" model_name="Reaction_subst" url_edit="{% url 'react_substance_detail_edit' id_reaction substance.pk %}" >
-     
+    
      {% if substance.substance %}
+    <!-- <tr> 
+     <td class="detail_caption">Вещество </td>
+  <td class="detail_value">    
+   <select class="select2 col-xs-12" data-check-url = "{% url 'substance_search_list'%}" > 
+</select>
+    </td> 
+        {% if is_owner %}
+        <td class="detail_edit" > </td>         
+         <td class="detail_btns" field_name="substance">     
+        </td>
+        {% endif %}
+         </tr>
+     -->
     <tr>
         <td class="detail_caption">Название:</td>
         <td class="detail_value">{{  substance.substance.name }}</td>
@@ -84,4 +102,7 @@
 
 {% block footer_block %}
 <script src="{% static "js/details.js" %}"></script>
+<script src="{% static "js/subst_select.js" %}"></script>
+<script src="{% static "js/select2/select2.min.js" %}"></script>
+<script src="{% static "js/select2/i18n/ru.js" %}"></script>
 {% endblock %}
