Нужна миграция. 1)Исправлены ошибки в механизмах (не распознавался символ обратимой стадии. Не распознавались псевдонимы кириллицей. Не сменялось сообщение о балансе при редактировании новой стадии) 2) обработка псевдонимов без привязки к веществам при формировании стаий и проверке баланса 3) справочники ограничений/критериев, функционалов и параметров задач 4) переименованы названи файлов-шаблонов для задач, чтобы было легче ориентироваться 5) заготовки для формирования контекста обратной задачи для отображения в шаблоне

--- a/chemcloud/templates/chemical/problem_calc_options.html
+++ b/chemcloud/templates/chemical/problem_calc_options.html
@@ -22,11 +22,11 @@
    
     
  {% if problem.problem_type.pk == 1 %} <!-- Прямая задача химической кинетики-->
-         {% include "chemical/problem_calc_options_1.html" %}
+         {% include "chemical/problem_calc_options_1_direct.html" %}
      {% endif %}
     
 {% if problem.problem_type.pk == 2 %} <!-- Обратная задача химической кинетики-->
-         {% include "chemical/problem_calc_options_2.html" %}
+         {% include "chemical/problem_calc_options_2_inverse.html" %}
      {% endif %}
      
      <!-- Анализ неопределенности кинетических параметров-->
@@ -40,7 +40,9 @@
      {% endif %}
     
 				<div class="panel-body">
-					<a class = "btn btn-new" href = "#" role = "button">Запустить расчет</a> 
+					<a class = "btn btn-new" href = "#" role = "button">Назад</a> 
+                    <a class = "btn btn-new" href = "#" role = "button">Запустить расчет</a> 
+                    
 				</div>
 			
     
