--- a/chemcloud/templates/chemical/problem_init_2_inverse.html
+++ b/chemcloud/templates/chemical/problem_init_2_inverse.html
@@ -1,6 +1,6 @@
 <!-- Обратная задача химической кинетики-->  
 {% block body_block %}
-       {% if problem_context['criteria_list'] %}
+       {% if problem_context %}
 
 		
     <div class="panel panel-default">
